Adjust alignment and spacing resolves issue #21

--- a/css/styles.css
+++ b/css/styles.css
@@ -453,6 +453,19 @@ pre {
   margin-left: auto; 
 }
 
+/* MOBILE RESPONSIVE
+ This fixes white space on the right
+*/
+@media only screen and (max-width: 480px){
+  html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px; } }
@@ -4102,6 +4115,7 @@ a.close.disabled {
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: center;
+   
 }
 
 
